Added predator endpoint

--- a/templates/vegetable.html
+++ b/templates/vegetable.html
@@ -13,10 +13,16 @@
             #header{
                 padding-top: 6%;
             }
-            a{
-                text-decoration: none;
-                color: aqua;
+            #liid{
+                text-decoration: none !important;
+                color: aqua !important;
 
+            }
+            h2{
+color: aliceblue;
+            }
+            p{
+                color: aliceblue;
             }
         </style>
     </head>
@@ -45,53 +51,53 @@
           </div> 
 
           <div id="header">
-            <h2 class="lead" style="font-size: 34px;">All Vegetables</h2>
+            <h2 class="lead" style=" color: aliceblue; font-size: 34px;">All Vegetables</h2>
             <p class="lead" style="font-size: 12px;">Sorted by Market Cap...</p>
             <div class="row">
                 <div class="col">
-            <ul>
-                <li>
-                    <a class="mt-4" href="#">Tomatoes</a>
+            <ul id="liid">
+                <li >
+                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Tomatoes</a>
                 </li>
                 <li class="mt-3">
-                    <a class="mt-4" href="#">Acorn squash</a>
+                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Acorn squash</a>
                 </li>
                 <li class="mt-3">
-                    <a class="mt-4" href="#">Artichoke</a>
+                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Artichoke</a>
                 </li>
                 <li class="mt-3">
-                    <a class="mt-4" href="#">Asparagus</a>
+                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Asparagus</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Avocado</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Avocado</a>
                 </li>
                 
                 <li class="mt-3">
-                    <a class="" href="#">Black beans</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Black beans</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Blackeye peas</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Blackeye peas</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Broccoli florets</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Broccoli florets</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Broccoli</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Broccoli</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Brussels sprouts</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Brussels sprouts</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Butternut squash</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Butternut squash</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Cabbage</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Cabbage</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Carrot</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Carrot</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Cauliflower</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Cauliflower</a>
                 </li>
                 
                 
@@ -99,97 +105,97 @@
             </ul>
             </div>
             <div class="col">
-                <ul>
+                <ul id="liid">
                     <li class="">
-                        <a class="" href="#">Celery</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Celery</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Collard greens</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Collard greens</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Corn</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Corn</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Cucumber</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Cucumber</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Great northern beans</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Great northern beans</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Green beans</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Green beans</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Green peas</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Green peas</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Green pepper</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Green pepper</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Kale</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Kale</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Kidney beans</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Kidney beans</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Lentil</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Lentil</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Lettuce</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Lettuce</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#">Lima bean</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#">Lima bean</a>
                     </li>
                     <li class="mt-3">
-                        <a class="" href="#"> Navy bean</a>
+                        <a style="text-decoration: none; color: aqua;" class="" href="#"> Navy bean</a>
                     </li>
                            
                 </ul>
             </div>
 
             <div class="col">
-                <ul>
+                <ul id="liid">
                 </li>
                 <li class="">
-                    <a class="" href="#">Pumpkin</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Pumpkin</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Radish</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Radish</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Red pepper</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Red pepper</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Spinach</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Spinach</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Sweet potato</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Sweet potato</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Okra</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Okra</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Olive</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Olive</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Onion</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Onion</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Pinto bean</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Pinto bean</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Potato</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Potato</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Turnip green</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Turnip green</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Zucchini</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Zucchini</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Mushroom</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Mushroom</a>
                 </li>
                 <li class="mt-3">
-                    <a class="" href="#">Mustard green</a>
+                    <a style="text-decoration: none; color: aqua;" class="" href="#">Mustard green</a>
                 </li>
                       
             </ul>
@@ -197,6 +203,6 @@
             </div>
             </div>
           </div>
-       
+       {%include 'footer.html'%}
     </body>
 </html>
