--- a/templates/homenav.html
+++ b/templates/homenav.html
@@ -26,10 +26,10 @@
             <a style="color: antiquewhite;" class="nav-link active" href="#requirements">Local Markets</a>
           </li>
           <li class="nav-item">
-            <a style="color: antiquewhite;" class="nav-link active" href="#">Careers</a>
+            <a style="color: antiquewhite;" class="nav-link active" href="{{url_for('careers')}}">Careers</a>
           </li>
           <li class="nav-item">
-            <a style="color: antiquewhite;" class="nav-link active" href="contactus">Contact us</a>
+            <a style="color: antiquewhite;" class="nav-link active" href="{{url_for('contactus')}}">Contact us</a>
           </li>
          </ul>
   
