--- a/templates/predator.html
+++ b/templates/predator.html
@@ -124,7 +124,9 @@
                              decisions. Harnessing the power of predictive analytics, Predator empowers users 
                              to anticipate market fluctuations and optimize their purchasing strategies.</p>
                     </div>
-                    
+                    <div class="text-center" style="position: absolute; bottom: 32%; left: 38%;">
+                         <h4  style="position: relative; top:10%;"><b>PREDATOR CONTAINS...</b></h4>
+                    </div>
                     <div class="container" style="position: absolute; top: 70%; ;left: 5%;">
                         <button type="button" class="btn btn-light btn-lg"><b style="font-size: 16px;">Grocery Prices</b>
                             <div style="font-size: 12px;">Observe predictions of Groceries and Vegetables accurately...</div>
@@ -163,7 +165,7 @@
                             <a href="{{url_for('homepage')}}" class="" style="text-decoration: none; color:black;"> Home</a>
                         </li>
                         <li class="mb-4">
-                            <a href="#" class="" style="text-decoration: none; color:black;">Careers</a>
+                            <a href="{{url_for('careers')}}" class="" style="text-decoration: none; color:black;">Careers</a>
         
                         </li>
                         
