--- a/templates/homenav.html
+++ b/templates/homenav.html
@@ -20,10 +20,10 @@
         <ul class="navbar-nav me-auto mb-lg-0 text-center">
           
           <li class="nav-item">
-            <a style="color: antiquewhite;" class="nav-link active" aria-current="page" href="#about">About us</a>
+            <a style="color: antiquewhite;" class="nav-link active" aria-current="page" href="#">About us</a>
           </li>
           <li class="nav-item">
-            <a style="color: antiquewhite;" class="nav-link active" href="#requirements">Local Markets</a>
+            <a style="color: antiquewhite;" class="nav-link active" href="{{url_for('localmarkets')}}">Local Markets</a>
           </li>
           <li class="nav-item">
             <a style="color: antiquewhite;" class="nav-link active" href="{{url_for('careers')}}">Careers</a>
