--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <html>
       <head>
           <title>
-              Price Star
+              Predator
           </title>
           <style>
             #bod {
