--- a/templates/predator.html
+++ b/templates/predator.html
@@ -170,7 +170,7 @@
                         </li>
                         
                         <li class="mb-4">
-                            <a href="#" class="" style="text-decoration: none; color:black;">Local Markets</a>
+                            <a href="{{url_for('localmarkets')}}" class="" style="text-decoration: none; color:black;">Local Markets</a>
         
                         </li>
                         
