Connected Contactus to DB

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
           <title>
               Predator
           </title>
-          <style>
+          <link rel='icon' href='static/favicon.ico' type='image/x-icon' sizes="16x16" />
+        <style>
             #bod {
                 margin-top: 4%;
             }
