Connected Contactus to session

--- a/templates/indexnav.html
+++ b/templates/indexnav.html
@@ -26,7 +26,7 @@
           <a style="color: antiquewhite;" class="nav-link active" href="#requirements">Local Markets</a>
         </li>
         <li class="nav-item">
-          <a style="color: antiquewhite;" class="nav-link active" href="contactus">Contact us</a>
+          <a style="color: antiquewhite;" class="nav-link active" href="login">Contact us</a>
         </li>
        </ul>
 
