--- a/templates/login.html
+++ b/templates/login.html
@@ -28,13 +28,13 @@
                       <form method="post">
                         <h1 class="text-center lead mb-4" style="font-size: 32px;"><b>LOGIN HERE</b></h1>
                         <div class="form-outline mb-4">
-                          <input type="Username" name="username" id="username" class="form-control form-control-lg" placeholder="Enter Username" />
+                          <input type="Username" name="username" id="username" class="form-control form-control-lg" placeholder="Enter Username" required/>
                           <label class="form-label" name="username" for="form1Example13"><b>Username</b></label>
                         </div>
               
                         <!-- Password input -->
                         <div class="form-outline mb-4">
-                          <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" placeholder="Enter Password" />
+                          <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" placeholder="Enter Password" required/>
                           <label class="form-label" name="password" for="form1Example23"><b>Password</b></label>
                         </div>
               
