--- a/templates/vegetable.html
+++ b/templates/vegetable.html
@@ -57,13 +57,16 @@ color: aliceblue;
                 <div class="col">
             <ul id="liid">
                 <li >
-                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Tomatoes</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='tomato') }}" style="text-decoration: none; color: aqua;">Tomatoes</a>
+
+                      </li>
+                <li class="mt-3">
+                    <a href="{{ url_for('predict_price', vegetable_name='potato') }}" style="text-decoration: none; color: aqua;">Potato</a>
+
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Acorn squash</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Artichoke</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='peas') }}" style="text-decoration: none; color: aqua;">Peas</a>
+
                 </li>
                 <li class="mt-3">
                     <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Asparagus</a>
