Vegatables prediction closes

--- a/templates/vegetable.html
+++ b/templates/vegetable.html
@@ -65,92 +65,38 @@ color: aliceblue;
 
                 </li>
                 <li class="mt-3">
-                    <a href="{{ url_for('predict_price', vegetable_name='peas') }}" style="text-decoration: none; color: aqua;">Peas</a>
+            <a href="{{ url_for('predict_price', vegetable_name='peas') }}" style="text-decoration: none; color: aqua;">Peas</a>
 
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="mt-4" href="#">Asparagus</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='pumpkin') }}" style="text-decoration: none; color: aqua;">Pumpkin</a>
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Avocado</a>
-                </li>
-                
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Black beans</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Blackeye peas</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Broccoli florets</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Broccoli</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Brussels sprouts</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Butternut squash</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Cabbage</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Carrot</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Cauliflower</a>
-                </li>
-                
-                
-                
+                    <a href="{{ url_for('predict_price', vegetable_name='cucumber') }}" style="text-decoration: none; color: aqua;">Cucumber</a>
+   </li>
+   <li class="mt-3">
+    <a href="{{ url_for('predict_price', vegetable_name='ginger') }}" style="text-decoration: none; color: aqua;">Ginger</a>
+</li>
             </ul>
             </div>
             <div class="col">
                 <ul id="liid">
                     <li class="">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Celery</a>
+                        <a href="{{ url_for('predict_price', vegetable_name='pointed gourd') }}" style="text-decoration: none; color: aqua;">Pointed Gourd</a>
                     </li>
                     <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Collard greens</a>
+                        <a href="{{ url_for('predict_price', vegetable_name='radish') }}" style="text-decoration: none; color: aqua;">Radish</a>
                     </li>
                     <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Corn</a>
+                        <a href="{{ url_for('predict_price', vegetable_name='bitter gourd') }}" style="text-decoration: none; color: aqua;">Bitter Gourd</a>
                     </li>
                     <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Cucumber</a>
+                        <a href="{{ url_for('predict_price', vegetable_name='onion') }}" style="text-decoration: none; color: aqua;">Onion</a>
                     </li>
                     <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Great northern beans</a>
+                        <a href="{{ url_for('predict_price', vegetable_name='garlic') }}" style="text-decoration: none; color: aqua;">Garlic</a>
                     </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Green beans</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Green peas</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Green pepper</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Kale</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Kidney beans</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Lentil</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Lettuce</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#">Lima bean</a>
-                    </li>
-                    <li class="mt-3">
-                        <a style="text-decoration: none; color: aqua;" class="" href="#"> Navy bean</a>
-                    </li>
+                
                            
                 </ul>
             </div>
@@ -159,46 +105,19 @@ color: aliceblue;
                 <ul id="liid">
                 </li>
                 <li class="">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Pumpkin</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='cabbage') }}" style="text-decoration: none; color: aqua;">Cabbage</a>
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Radish</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='cauliflower') }}" style="text-decoration: none; color: aqua;">Cauliflower</a>
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Red pepper</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='chilly') }}" style="text-decoration: none; color: aqua;">Chilly</a>
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Spinach</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='okra') }}" style="text-decoration: none; color: aqua;">Okra</a>
                 </li>
                 <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Sweet potato</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Okra</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Olive</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Onion</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Pinto bean</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Potato</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Turnip green</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Zucchini</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Mushroom</a>
-                </li>
-                <li class="mt-3">
-                    <a style="text-decoration: none; color: aqua;" class="" href="#">Mustard green</a>
+                    <a href="{{ url_for('predict_price', vegetable_name='brinjal') }}" style="text-decoration: none; color: aqua;">Brinjal</a>
                 </li>
                       
             </ul>
