--- a/templates/login.html
+++ b/templates/login.html
@@ -1,83 +1,138 @@
-<doctype html>
-    <html>
-        <head>
-            <title>
-                Login
-            </title>
-            {%include 'bootstrap.html'%}
-            
-        </head>
-        <body>
-            <section class="vh-100">
-                <div class="container py-5 h-100">
-                  <div class="row d-flex align-items-center justify-content-center h-100">
-                    <div class="col-md-8 col-lg-7 col-xl-6">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
-                        class="img-fluid" alt="Phone image">
-                    </div>
-                    <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-                      {% with messages = get_flashed_messages() %}
-                      {% if messages %}
-                        <ul class="flash">
-                          {% for message in messages %}
-                            <li>{{ message }}</li>
-                          {% endfor %}
-                        </ul>
-                      {% endif %}
-                    {% endwith %}
-                      <form method="post">
-                        <h1 class="text-center lead mb-4" style="font-size: 32px;"><b>LOGIN HERE</b></h1>
-                        <div class="form-outline mb-4">
-                          <input type="Username" name="username" id="username" class="form-control form-control-lg" placeholder="Enter Username" required/>
-                          <label class="form-label" name="username" for="form1Example13"><b>Username</b></label>
-                        </div>
-              
-                        <!-- Password input -->
-                        <div class="form-outline mb-4">
-                          <input type="password" name="password" id="form1Example23" class="form-control form-control-lg" placeholder="Enter Password" required/>
-                          <label class="form-label" name="password" for="form1Example23"><b>Password</b></label>
-                        </div>
-              
-                        <div class="d-flex justify-content-around align-items-center mb-4">
-                          <!-- Checkbox -->
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
-                            <label class="form-check-label" for="form1Example3"> Remember me </label>
-                          </div>
-                          
+<!-- Section: Design Block -->
+<section class="background-radial-gradient overflow-hidden">
+  {%include 'bootstrap.html'%}
+  <title>Login</title>
+  <style>
+    .background-radial-gradient {
+      background-color: hsl(218, 41%, 15%);
+      background-image: radial-gradient(650px circle at 0% 0%,
+          hsl(218, 41%, 35%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%)r 80%,
+          transparent 100%),
+        radial-gradient(1250px circle at 100% 100%,
+          hsl(218, 41%, 45%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%) 80%,
+          transparent 100%);
+    }
 
-                          <a href="#!">Forgot password?</a>
-                        </div>
-                        {% if error %}
-                        <div class="alert alert-danger mt-3" role="alert">
-                            {{ error }}
-                        </div>
-                        {% endif %}
-                        <!-- Submit button -->
-                        <button href="{{url_for('signup')}}" type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+    #radius-shape-1 {
+      height: 220px;
+      width: 220px;
+      top: -60px;
+      left: -130px;
+      background: radial-gradient(#44006b, #ad1fff);
+      overflow: hidden;
+    }
+    #non{
+      text-decoration: none;
+    }
+    #radius-shape-2 {
+      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+      bottom: -60px;
+      right: -110px;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(#44006b, #ad1fff);
+      overflow: hidden;
+    }
+    .card {
+background-color: rgba(255, 255, 255, 0.8); /* Use RGBA color to set transparency */
+border-radius: 10px;
+padding: 20px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+}
+   
+  </style>
+<body>
+  <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+          Connect with us &<br />
+          <span style="color: hsl(218, 81%, 75%)">Enter Predator, Our AI powered Prices Prediction System...</span>
+        </h1>
+        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%); font-size:20px;">
+          "Prices Prediction combined with Artificial Intelligence makes revolutionary changes in future marketing" 
+        </p>
+        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%); font-size:20px;">Source : Trust Me Bro...</p>
+      </div>
+
+      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+        <div class="card bg-glass">
+          <div class="card-body px-4 py-5 px-md-5">
+            {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                      <ul class="flash">
+                        {% for message in messages %}
+                          <li>{{ message }}</li>
+                        {% endfor %}
+                      </ul>
+                    {% endif %}
+                  {% endwith %}
+            <form method="post">
+              <p class="text-center" style="font-size: 24x;">Login Here...</p>
+              <!-- 2 column grid layout with text inputs for the first and last names -->
               
-                        <div class="divider d-flex align-items-center my-4">
-                          <p class="text-center fw-bold mx-3 mb-0 text-muted">Don't Have an Account? </p>
-                          <a href="{{url_for('signup')}}" class="btn btn-dark btn-lg">Signup</a>
-                        </div>
-                        <div class="divider d-flex align-items-center my-4">
-                            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
-                        </div>
-              
-                        <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-                          role="button">
-                          <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
-                        </a>
-                        <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee" href="#!"
-                          role="button">
-                          <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
-              
-                      </form>
-                     
-                    </div>
+              <div class="form-outline mb-4">
+                <input type="username" id="form3Example3" class="form-control" name="username" required/>
+                <label class="form-label" for="form3Example3">Username</label>
+              </div>
+
+              <!-- Password input -->
+<div class="form-outline mb-4">
+<input type="password" id="form3Example4" class="form-control" name="password" required/>
+<label class="form-label" for="form3Example4">Password</label>
+</div>
+
+              <!-- Checkbox -->
+              <div class="form-check d-flex justify-content-center mb-4">
+                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                <label class="form-check-label" for="form2Example33">
+                  Accept our mails and stay updated...
+                </label>
+              </div>
+
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-primary btn-block mb-4">
+                Sign In
+              </button>
+
+              <!-- Register buttons -->
+              <div class="text-center">
+                <p>or sign-in with:</p>
+                <div class="mt-4">
+                  <div class="row">
+                      <div class="col-sm-6" id="non">
+                     <a id="non" href="#">Google</a>
+                     </div>
+                     <div class="col-sm-6 mb-4" id="non">
+                     <a class="text-center" id="non" href="#">Twitter</a></div>
                   </div>
                 </div>
-              </section>
-        </body>
-    </html>
-</doctype>
+              </div>
+
+              <div class="mt-4 text-center">
+                  <p>New to Our Application? <a id="non" href="{{url_for('signup')}}">Register Here</a></p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</section>
+<!-- Section: Design Block -->
